Refactoring: Angular Style Guide

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,5 +1,5 @@
 {
-  "HOME":          "Home",
+  "HOME":          "Start",
   "ABOUT":         "Impressum",
   "ABOUT_TEXT":    "Gratulation! Du bist zu einer anderen Seite navigiert!",
   "WELCOME":       "Willkommen!",
